--- a/index.html
+++ b/index.html
@@ -8,18 +8,25 @@
     <meta charset="utf-8" />
     <title>title page</title>
     <link href="index.css" rel="stylesheet">
+    <link href="index_news.css" rel="stylesheet">
 </head>
 
 <body>
-    <ul>
-        <a href="index.html" class="active">Home</a>
-        <a href="tutorials.html">Tutorials</a>
-        <a href="resources.html">Resources</a>
-        <a href="tools.html">Tools</a>
-        <a href="vulnerabilities.html">Vulnerabilities</a>
-        <a href="careers.html">Careers</a>
-        <a href="blog.html">Blog</a>
-    </ul>
+    <section class="page_head">
+        <div class="title">
+            <h1>CYBER WIKI</h1>
+        </div>
+
+        <div class="topnav">
+            <a class="active" href="index.html">Home</a>
+            <a href="tutorials.html">Tutorials</a>
+            <a href="resources.html">Resources</a>
+            <a href="tools.html">Tools</a>
+            <a href="vulnerabilities.html">Vulnerabilities</a>
+            <a href="careers.html">Careers</a>
+            <a href="blog.html">Blog</a>
+        </div>
+    </section>
 
 <!-- News panel-->
 
