--- a/index.html
+++ b/index.html
@@ -330,6 +330,8 @@
             <a href="about.html">about</a>
             <a href="jobs.html">jobs</a>
             <a href="contact.html">contact</a>
+            <a href="jobs.html">partner with us</a>
+            <a href="contact.html">submit a blog post</a>
         </div>
 
     </footer>
