--- a/about.html
+++ b/about.html
@@ -7,10 +7,31 @@
    -->
     <meta charset="utf-8" />
     <title>title page</title>
+    <link href="index.css" rel="stylesheet">
 </head>
 
 <body>
-This page is for classwork and education purposes.
+    <header>
+        <h1>
+            <a href="index.html">CYBER WIKI</a>
+        <h1>
+    </header>
+
+    <div class="top_nav">
+        <a class="active" href="index.html">Home</a>
+        <a href="tutorials.html">Tutorials</a>
+        <a href="resources.html">Resources</a>
+        <a href="tools.html">Tools</a>
+        <a href="vulnerabilities.html">Vulnerabilities</a>
+        <a href="careers.html">Careers</a>
+        <a href="blog.html">Blog</a>
+    </div>
+
+    <h2>ABOUT</h2>
+
+    <p>
+        NOTE: This website is part of a project college credit.<br>
+    </p>
 </body>
 
 </html>
