--- a/index.html
+++ b/index.html
@@ -9,15 +9,12 @@
     <title>title page</title>
     <link href="index.css" rel="stylesheet">
     <link href="index_news.css" rel="stylesheet">
-    <link href="test_file.css" rel="stylesheet">
 </head>
 
 <body>
     <header>
         <h1>
-            <a href="index.html">
-                <h1>CYBER WIKI</h1>
-            </a>
+            <a href="index.html">CYBER WIKI</a>
         <h1>
     </header>
 
