--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
     <meta charset="utf-8" />
     <title>title page</title>
     <link href="index.css" rel="stylesheet">
+    <link href="about.css" rel="stylesheet">
 </head>
 
 <body>
@@ -31,6 +32,8 @@
 
     <p>
         NOTE: This website is part of a project college credit.<br>
+        Some Text About Me:<br>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni ipsa ipsum voluptates, magnam iste dolor quisquam, consectetur voluptas veniam praesentium modi nemo. Id incidunt alias sapiente est corrupti numquam ducimus.
     </p>
 </body>
 
