--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
     <h2>ABOUT</h2>
 
     <p>
-        NOTE: This website is part of a project college credit.<br>
+        NOTE: This website is part of a project for college credit.<br>
         Some Text About Me:<br>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni ipsa ipsum voluptates, magnam iste dolor quisquam, consectetur voluptas veniam praesentium modi nemo. Id incidunt alias sapiente est corrupti numquam ducimus.
     </p>
