Added folder, moved styles from test file

--- a/about.html
+++ b/about.html
@@ -7,8 +7,8 @@
    -->
     <meta charset="utf-8" />
     <title>title page</title>
-    <link href="index.css" rel="stylesheet">
-    <link href="about.css" rel="stylesheet">
+    <link href="Styles/index.css" rel="stylesheet">
+    <link href="Styles/about.css" rel="stylesheet">
 </head>
 
 <body>
