--- a/test_file.html
+++ b/test_file.html
@@ -8,7 +8,7 @@
    -->
     <meta charset="utf-8" />
     <title>test_file</title>
-    <link href="test_file.css" rel="stylesheet">
+    <link href="Styles/test_file.css" rel="stylesheet">
 </head>
 
 <body>
