--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
    -->
     <meta charset="utf-8" />
     <title>title page</title>
-    <link href="index.css" rel="stylesheet">
-    <link href="index_news.css" rel="stylesheet">
+    <link href="Styles/index.css" rel="stylesheet">
+    <link href="Styles/index_news.css" rel="stylesheet">
 </head>
 
 <body>
