Added HTML folder, relative paths, and added description to each html file.

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -7,19 +7,19 @@
    -->
     <meta charset="utf-8" />
     <title>title page</title>
-    <link href="Styles/index.css" rel="stylesheet">
-    <link href="Styles/about.css" rel="stylesheet">
+    <link href="../Styles/index.css" rel="stylesheet">
+    <link href="../Styles/about.css" rel="stylesheet">
 </head>
 
 <body>
     <header>
         <h1>
-            <a href="index.html">CYBER WIKI</a>
+            <a href="../index.html">CYBER WIKI</a>
         <h1>
     </header>
 
     <div class="top_nav">
-        <a class="active" href="index.html">Home</a>
+        <a class="active" href="../index.html">Home</a>
         <a href="tutorials.html">Tutorials</a>
         <a href="resources.html">Resources</a>
         <a href="tools.html">Tools</a>
