--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <!--
-    This will be a web form
+    This will contain contact information
    -->
     <meta charset="utf-8" />
     <title>contact</title>
