--- a/HTML/resources.html
+++ b/HTML/resources.html
@@ -3,14 +3,14 @@
 
 <head>
     <!--
-    This will be a web form
+This page will contain cyber resources 
    -->
     <meta charset="utf-8" />
     <title>contact</title>
 </head>
 
 <body>
-This page will be a web form 
+This page will contain cyber resources 
 </body>
 
 </html>
