--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -3,14 +3,14 @@
 
 <head>
     <!--
-    This will be a web form
+    This will be the blog page
    -->
     <meta charset="utf-8" />
     <title>contact</title>
 </head>
 
 <body>
-This page will be a web form 
+    This will contain blog posts
 </body>
 
 </html>
