--- a/HTML/tools.html
+++ b/HTML/tools.html
@@ -3,14 +3,14 @@
 
 <head>
     <!--
-    This will be a web form
+This will contain helpful tools
    -->
     <meta charset="utf-8" />
     <title>contact</title>
 </head>
 
 <body>
-This page will be a web form 
+This will contain helpful tools
 </body>
 
 </html>
