--- a/HTML/tutorials.html
+++ b/HTML/tutorials.html
@@ -3,14 +3,14 @@
 
 <head>
     <!--
-    This will be a web form
-   -->
+    this file will contain helpful tutorials
+    -->
     <meta charset="utf-8" />
     <title>contact</title>
 </head>
 
 <body>
-
+    This page will contain helpful tutorials
 </body>
 
 </html>
