--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -7,10 +7,29 @@
    -->
     <meta charset="utf-8" />
     <title>contact</title>
+    <link href="../Styles/universal_styles.css" rel="stylesheet">
+    <link href="../Styles/contact.css" rel="stylesheet">
 </head>
 
 <body>
-This page will be a web form 
+    <header>
+        <a href="../index.html">
+            <img src="../cyberstop99_logo.png"
+            alt="CYBER STOP 99">
+        </a>
+    </header>
+
+    <div class="top_nav">
+        <a href="../index.html">Home</a>
+        <a href="../HTML/tutorials.html">Tutorials</a>
+        <a href="../HTML/resources.html">Resources</a>
+        <a href="../HTML/tools.html">Tools</a>
+        <a href="../HTML/vulnerabilities.html">Vulnerabilities</a>
+        <a href="../HTML/careers.html">Careers</a>
+        <a href="../HTML/blog.html">Blog</a>
+    </div>
+
+
 </body>
 
 </html>
