--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
     <title>title page</title>
     <link href="Styles/index.css" rel="stylesheet">
     <link href="Styles/index_news.css" rel="stylesheet">
+    <link href="Styles/universal_styles.css" rel="stylesheet">
+
 </head>
 
 <body>
     <header>
-        <h1>
-            <a href="index.html">CYBER WIKI</a>
-        <h1>
+        <a href="index.html">
+            <img src="cyberstop99_logo.png"
+            alt="CYBER STOP 99">
+        </a>
     </header>
 
     <div class="top_nav">
@@ -130,8 +133,8 @@
     </div>
 
 
-    <!-- Tutorials panel-->
-    <h2>FEATURED&nbsp;&nbsp;TUTORIALS</h2>
+    <!-- Featured panel-->
+    <h2>FEATURED</h2>
 
     <div id="news-container">
 
