--- a/about.html
+++ b/about.html
@@ -7,26 +7,28 @@
    -->
     <meta charset="utf-8" />
     <title>title page</title>
-    <link href="../Styles/index.css" rel="stylesheet">
-    <link href="../Styles/about.css" rel="stylesheet">
+    <link href="Styles/index.css" rel="stylesheet">
+    <link href="Styles/about.css" rel="stylesheet">
+    <link href="Styles/universal_styles.css" rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <h1>
-            <a href="../index.html">CYBER WIKI</a>
-        <h1>
+        <a href="index.html">
+            <img src="cyberstop99_logo.png"
+            alt="CYBER STOP 99">
+        </a>
     </header>
 
-    <div class="top_nav">
-        <a class="active" href="../index.html">Home</a>
+    <nav>
+        <a class="active" href="index.html">Home</a>
         <a href="tutorials.html">Tutorials</a>
         <a href="resources.html">Resources</a>
         <a href="tools.html">Tools</a>
         <a href="vulnerabilities.html">Vulnerabilities</a>
         <a href="careers.html">Careers</a>
         <a href="blog.html">Blog</a>
-    </div>
+    </nav>
 
     <h2>ABOUT</h2>
 
@@ -35,6 +37,7 @@
         Some Text About Me:<br>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni ipsa ipsum voluptates, magnam iste dolor quisquam, consectetur voluptas veniam praesentium modi nemo. Id incidunt alias sapiente est corrupti numquam ducimus.
     </p>
+
 </body>
 
 </html>
