--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
         </a>
     </header>
 
-    <div class="top_nav"> <!--dont use div nav-->
+    <nav>
         <a class="active" href="index.html">Home</a>
-        <a href="HTML/tutorials.html">Tutorials</a>
-        <a href="HTML/resources.html">Resources</a>
-        <a href="HTML/tools.html">Tools</a>
-        <a href="HTML/vulnerabilities.html">Vulnerabilities</a>
-        <a href="HTML/careers.html">Careers</a>
-        <a href="HTML/blog.html">Blog</a>
-    </div>
+        <a href="tutorials.html">Tutorials</a>
+        <a href="resources.html">Resources</a>
+        <a href="tools.html">Tools</a>
+        <a href="vulnerabilities.html">Vulnerabilities</a>
+        <a href="careers.html">Careers</a>
+        <a href="blog.html">Blog</a>
+    </nav>
 
     <!-- News panel-->
     <h2> CURRENT&nbsp;&nbsp;NEWS</h2>
@@ -283,11 +283,9 @@
 
     <footer>
         <div class="bottom_nav">
-            <a href="HTML/about.html">about</a>
-            <a href="HTML/jobs.html">jobs</a>
-            <a href="HTML/contact.html">contact</a>
-            <a href="HTML/jobs.html">partner with us</a>
-            <a href="HTML/contact.html">submit a blog post</a>
+            <a href="about.html">about</a>
+            <a href="jobs.html">jobs</a>
+            <a href="contact.html">contact</a>
         </div>
 
     </footer>
